<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:onClick="login"
        android:id="@+id/Login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:text="@string/login"
        android:textColor="#070505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="328dp"
        android:layout_height="183dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/Login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/images" />

    <Button

        android:id="@+id/lg_google"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_by_google"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_btn"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Login2"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_by_google"
        android:text="@string/continue_with_phone"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_btn"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="94dp"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/baloo"
        android:text="@string/millions_of_songs_free_on_spotify"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/Login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="108dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:background="#000000"
        android:text="@string/sign_up_free"
        android:textAllCaps="false"
        android:textColor="#FFFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login2"
        app:layout_constraintVertical_bias="0.247" />

</androidx.constraintlayout.widget.ConstraintLayout>